On the fly adding custom routes for wifi connections
Hi there! On latest Ubuntu (19.10 and 18.04 also) with installed NM 1.16.0 out of the box I found myself struggling in problem of reapplying WiFi interface changes after changing them. Here how it looks like:
# nmcli connection
NAME UUID TYPE DEVICE
CRY df20f637-e127-4f20-8bf8-b55122f4fd6d wifi wlxf81a6722f2a1
Wired connection 1 c6f2b121-fc05-3e0a-b1f9-cafe800792e2 ethernet ens33
# /usr/bin/nmcli connection modify CRY +ipv4.routes "193.37.157.53/32 192.168.77.1"
# /usr/bin/nmcli device reapply wlxf81a6722f2a1
Error: Reapplying connection to device 'wlxf81a6722f2a1' (/org/freedesktop/NetworkManager/Devices/3) failed: Can't reapply changes to '802-11-wireless.seen-bssids' setting
In my case those commands coming quickly from external application (VPN client) and eventually end up with this error. But sometimes it just works. Judging by 'seen-bssids' mentioned, problem is probably caused by always changing wireless network environment. Some networks may become out of reach or new network can arise from nonexistence. Is there any way to deal with such kind of problem without upgrading/downgrading NM? Should it be fixed in NM?