wifi: allow reapply when the seen-bssids property changed

wifi.seen-bssid is a synthetic read-only property that lists all the
bssids seen for that connection; it should be ignored during a
reapply.

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/issues/243
(cherry picked from commit 8cd8a5fbed8732786e5bb1640920c0ea23e559f7)
(cherry picked from commit 81cc4ddb1a068bcb0404e12929bd5feca707fd75)